--- a/Ex2/testex2.css
+++ b/Ex2/testex2.css
@@ -5,45 +5,89 @@ a{
 body{
     font-family: var(--font-family);
     background-color: #262c34;
+    display: block;
+    padding: 0;
+    margin: 0;
 }
 p{
     color: #adbac7;
     font-size: 16px;
     display: block;
     text-align: left;
-    padding: 10px;
-    padding-left:  600px;
-    margin: 7px;
-    width: 65%;
-
+    margin: auto;
+    width: 35%;
+    line-height: 1.7;
+    font-family: var(--font-family);
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 30%;
+    margin-inline-end: 0px;
     
 }
-p style{
-    text-align: center;
-}
  h2 a{
+     margin-left: -.87em;
     opacity: 0;
 }
  a:hover{
     opacity: 1;
-    text-decoration: none;
+    text-decoration: underline;
+
+ }
+ h2:hover a{
+    opacity: 1;
  }
  h3 a{
      opacity: 0;
+     margin-left: -.87em;
+    
+ }
+ h3:hover a{
+    opacity: 1;
  }
 
  ul{
+     
     color: #adbac7;
-    
+    display: table;
+    margin: 0 auto;
+    text-align: left;
+    padding-left: 0px;
+    margin-left:31%;
  }
- ul li {
-     list-style-type: disc;
-    
- }
- ul ul li{
-     list-style-type: circle;
-     padding: 0;
-     margin: 0;
-     font-weight: bold;
+code{
+    background-color:#363b46 ;
+}
 
+ul ul li{
+   line-height: 1.7;
+   
+}
+ul ul{
+    margin-left: 20px;
+    font-weight: bold;
+}
+ul li{
+    font-size: 16px;
+}
+   
+
+h2{
+    border-bottom: 1px solid #3e4c5a;
+    display: block;
+    padding: 0px;
+    margin-bottom: 0;
+    padding-bottom: .3rem;
+    font-size: 1.65rem;
+    margin-inline-start:30%;
+    margin-inline-end: 35%;
+    color:#adbac7; 
+}
+ h3{
+display: block;
+padding: 0px;
+margin-bottom: 0;
+margin-inline-start: 30%; 
+color:#adbac7;
  }
+
+
