--- a/Ex2/testex2.css
+++ b/Ex2/testex2.css
@@ -51,7 +51,7 @@ p{
     display: table;
     margin: 0 auto;
     text-align: left;
-    padding-left: 0px;
+    padding-left: 1px;
     margin-left:31%;
  }
 code{
@@ -89,5 +89,9 @@ margin-bottom: 0;
 margin-inline-start: 30%; 
 color:#adbac7;
  }
-
-
+.square{
+    list-style: square;
+}
+.disc{
+    list-style: disc;
+}
